--- a/apzz/index.html
+++ b/apzz/index.html
@@ -90,10 +90,10 @@
               <a href="#"><i class="fab fa-linkedin-in"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="https://www.facebook.com/?locale=id_ID"><i class="fab fa-facebook"></i></a>
             </li>
           </ul>
         </div>
